code/backup/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: telemedicine
  namespace: <PROJECT>
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - "127.0.0.1.sslip.io"
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: telemedicine-certs
